[metadata]
name = qyceilometer
description-file = README.rst
author = bughunter
author-email = 1394812183@qq.com

[files]
packages = 
    qyceilometer

[entry_points]
console_scripts = 
    qyceilometer.hour = qyceilometer.cmd.api:hour
    qyceilometer.day = qyceilometer.cmd.api:day
    qyceilometer.week = qyceilometer.cmd.api:week

oslo.config.opts = 
    wwceilometer = qyceilometer.opts:list_opts